# finger_ctrl-v2

./: .Xauthority  .bash_history  .bashrc  .gitconfig  .profile  .xsession-errors  .xsession-errors.old
.cache/fontconfig/: cabbd14511b9e8a55e92af97fb3a0461-le32d8.cache-4
.config/: lxkeymap.cfg  lxtask.conf  mimeapps.list
.config/autostart/: LXinput-setup.desktop
.config/chromium/: Local State  Safe Browsing Bloom Prefix Set  Safe Browsing Channel IDs  Safe Browsing Cookies  Safe Browsing Csd Whitelist  Safe Browsing Download  Safe Browsing Extension Blacklist  Safe Browsing UwS List  Safe Browsing UwS List Prefix Set  SingletonCookie  SingletonLock  SingletonSocket
.config/galculator/: galculator.conf
.config/geany/: geany.conf  geany_socket_latyr_rpi3__0
.config/gtk-2.0/: gtkfilechooser.ini
.config/leafpad/: leafpadrc
.config/pulse/: cookie
.dbus/session-bus/: 0e8712e871c44273af42dd6795617111-0  0e8712e871c44273af42dd6795617111-1  0e8712e871c44273af42dd6795617111-2
.local/share/: recently-used.xbel
.pki/nssdb/: key4.db
.vnc/: passwd
Downloads/: Defined_Macro.h
Downloads/File_Projet_CPP/: Dislin_Scope.cpp  Dislin_Scope.h
Downloads/LIBROBOT_IMU/: README.md
Downloads/LIBROBOT_IMU/src/: CMakeLists.txt  Robot_IMU_Control.cpp
Downloads/MODIFIED_LIBROBOT/: Robot_IMU_Control.pc.in
Downloads/New_Cpp/: ex_main.cpp
Downloads/libRobot_IMU_Control-MASTER/: CMakeLists.txt  Doxyfile.in
dislin-11.0/: INSTALL  README
dislin-11.0/ruby/: make_ruby
dislin-11.0/tcl/: dislin.c
projet_tristan/: projet.geany
projet_tristan/projet/: CMakeCache.txt  (+7 more)
(+2763 files in other folders)
